--- a/surveyformcodecamp.css
+++ b/surveyformcodecamp.css
@@ -7,7 +7,7 @@ html {
   margin: 0;
 }
 :root{
-  --white: aliceblue;
+  --color-white: aliceblue;
   --color-darkblue: darkblue;
 }
 body{
@@ -19,16 +19,65 @@ body{
 }
 body::before{
 
-  content: '';
+  content: ''; /*Properti content wajib ada untuk elemen pseudo ::before agar muncul. */
   position: fixed;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
   z-index: -1;
-  background: var(--color-darkblue);
-  background-image: linear-gradient(115deg, rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7)), url(img/beautiful-night-life.jpg);
+  background: var(--color-darkblue); /* For browsers that do not support gradients */
+  background-image: linear-gradient(115deg, rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7)), url(img/pexel-zetongs.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+}
+.judul{
+  margin-top: 3%;
+  /* background-color: wheat; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* min-height: 5rem; */
+}
+.short-gratitude{
+  margin: 1rem 0;
+
+}
+/* konten utama */
+
+/* .konten-form{
+  
+} */
+.konten-form2{
+  display: flex;
+  justify-content: center;
+  min-height: 50rem ;
+  /* width: 80%; */
+}
+.form-register{
+  /* border:; */
+  border-radius: 4px;
+  padding: 40px;
+  width: 50%; 
+  background:rgba(42, 42, 72, 0.7) 
+}
+label{
+  display: block;
+}
+/* .layout-name{
+  display: flex;
+  width: 100%;
+  height: 2rem;
+  background-color: var(--color-white);
+  border-radius: 4px;
+} */
+
+.nama,.email, .age{
+  width: 100%;
+  height: 2rem;
+  font-size:medium;
+  /* margin-left: 12px; */
+  padding-left: 12px;
+  border-radius: 5px;
 }
