media queries yang simpel, dan memahami nya 'pertama kali'

--- a/surveyformcodecamp.css
+++ b/surveyformcodecamp.css
@@ -84,9 +84,6 @@ body::before{
   /* background-color: wheat; */
   min-height: 30vh;
 }
-.improved{
-  /* display: block; */
-}
 
 .recommend-kontainer{
   /* background-color: wheat; */
@@ -119,3 +116,22 @@ min-height: 120px;
 .name-kontainer, .email-kontainer, .age-kontainer, .role-kontainer, .recommend-kontainer, .feature-kontainer, .improved-kontainer, .any-kontainer, .button-kontainer{
   margin: 1rem 0;
 }
+
+@media screen and (max-width:768px) {
+.button-kontainer{
+  margin-top: 3rem;
+}
+}
+
+@media screen and (max-width:480px) {
+  /* .konten-form2{
+    width: ;
+  } */
+  .form-register{
+    width: 90%;
+  }
+  .recommend-kontainer{
+    /* background-color: wheat; */
+    height: 14%;
+  }
+  }
